# python_fastapi_sqlmodel_example

./: README.md  docker-compose.dev.yaml  example.env  pyproject.toml
app/: __init__.py  main.py
app/core/: config.py
app/db/: session.py
app/endpoints/: depends.py  product.py  shop.py
app/models/: product.py  shop.py
app/repositories/: base.py  product.py  shop.py
migrations/: env.py
migrations/versions/: 0001_9abc9d5ccc53_add_shop_and_product.py
