[tool.poetry]
name = "Python Fastapi SQLModel REST API Example"
version = "0.1.0"
description = ""
authors = ["gshelukhin"]

[tool.poetry.dependencies]
python = "^3.10.2"
SQLAlchemy = "^1.4.36"
sqlmodel = "^0.0.6"
fastapi = "^0.78.0"
asyncpg = "^0.25.0"
uvicorn = "^0.17.6"
alembic = "^1.7.7"
python-dotenv = "^0.20.0"
Faker = "^13.12.0"
httpx = "^0.23.0"
xmljson = "^0.2.1"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
